@@ -126,6 +126,7 @@ documents those changes that are of interest to users and administrators.
     etc/burst_buffer.lua.example for a complete list of changes.
  -- Add a new "nodes=" argument to scontrol setdebug to allow the debug level
     on the slurmd processes to be temporarily altered.
+ -- Add InfluxDBTimeout parameter to acct_gather.conf.
 
 * Changes in Slurm 22.05.6
 ==========================
